--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
+    <div class="header">
+        <ul id="navigation-bar">
+            <li><a href="#about">Legendary &#128016; GOATS</a></li>
+            <li>About</li>
+            <li><a>Photos</a></li>
+            <li><a>Sign Up</a></li>
+        </ul>
+    </div>
 
+    <div class="main" id="about">
+        <div class="about-description">
+            <h1>This Goatsite is awesome</h1>
+            <p>Goats are the GOAT (Greatest of all Time). They're funny-looking, funny-sounding, and overall absolutely hilarious. However, sometimes they're also astoundingly good at sports...</p>
+            <button>Maaaa</button>
+        </div>
+
+        <div class="main-image">
+            <img src="./images/main-goat.jpg" alt="funny and cute baby goat picture">
+        </div>
+    </div>
 </body>
 
 </html>
