Add styles to index.html

--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GOAT</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>GOATs</title>
 </head>
 
 <body>
     <div class="header">
+        <div><a class="logo" href="#about">&#128016; Legendary GOATs</a></div>
         <ul id="navigation-bar">
-            <li><a href="#about">Legendary &#128016; GOATS</a></li>
-            <li>About</li>
-            <li><a>Photos</a></li>
-            <li><a>Sign Up</a></li>
+            <li class="right-align"><a class="nav-item">About</a></li>
+            <li class="right-align"><a class="nav-item">Photos</a></li>
+            <li class="right-align"><a class="nav-item">Sign Up</a></li>
         </ul>
     </div>
 
     <div class="main" id="about">
         <div class="about-description">
-            <h1>This Goatsite is awesome</h1>
-            <p>Goats are the GOAT (Greatest of all Time). They're funny-looking, funny-sounding, and overall absolutely hilarious. However, sometimes they're also astoundingly good at sports...</p>
-            <button>Maaaa</button>
+            <h1 class="hero-text">This Goatsite is awesome!</h1>
+            <p class="secondary-text">Goats are the GOAT (Greatest of all Time). They're funny-looking, funny-sounding,
+                and overall absolutely hilarious. However, sometimes they're also astoundingly good at sports...</p>
+            <button><span>Maaaa</span></button>
         </div>
 
         <div class="main-image">
-            <img src="./images/main-goat.jpg" alt="funny and cute baby goat picture">
+            <img src="./images/main-goat.jpg" alt="funny and cute baby goat picture" />
         </div>
+
     </div>
+
+
 </body>
 
 </html>
