Display 2nd part of the webpage, photos section
Added several images, and aligned them neatly using flexbox. They
also shrink correctly as expected and needed.

--- a/index.html
+++ b/index.html
@@ -9,30 +9,73 @@
 </head>
 
 <body>
-    <div class="header">
-        <div><a class="logo" href="#about">&#128016; Legendary GOATs</a></div>
-        <ul id="navigation-bar">
-            <li class="right-align"><a class="nav-item">About</a></li>
-            <li class="right-align"><a class="nav-item">Photos</a></li>
-            <li class="right-align"><a class="nav-item">Sign Up</a></li>
-        </ul>
-    </div>
-
-    <div class="main" id="about">
-        <div class="about-description">
-            <h1 class="hero-text">This Goatsite is awesome!</h1>
-            <p class="secondary-text">Goats are the GOAT (Greatest of all Time). They're funny-looking, funny-sounding,
-                and overall absolutely hilarious. However, sometimes they're also astoundingly good at sports...</p>
-            <button><span>Maaaa</span></button>
+    <div class="body">
+        <div class="header">
+            <div><a class="logo" href="#">&#128016; Legendary GOATs</a></div>
+            <ul id="navigation-bar">
+                <li class="right-align"><a class="nav-item" href="#about">About</a></li>
+                <li class="right-align"><a class="nav-item" href="#photos">Photos</a></li>
+                <li class="right-align"><a class="nav-item" href="#">Sign Up</a></li>
+            </ul>
         </div>
 
-        <div class="main-image">
-            <img src="./images/main-goat.jpg" alt="funny and cute baby goat picture" />
+        <div class="main" id="about">
+            <div class="about-description">
+                <h1 class="hero-text">This Goatsite is awesome!</h1>
+                <p class="secondary-text">Goats are the GOAT (Greatest of all Time). They're funny-looking,
+                    funny-sounding,
+                    and overall absolutely hilarious. However, sometimes they're also astoundingly good at sports...</p>
+                <button><span>Maaaa</span></button>
+            </div>
+
+            <div class="main-image">
+                <img src="./images/main-goat.jpg" alt="funny and cute baby goat picture" />
+            </div>
+
+        </div>
+
+        <div class="funny-images" id="photos">
+            <h2 class="title2">Random Goats</h2>
+            <div class="goats-container">
+
+                <div class="image">
+                    <img src="./images/goat-look.jpg" alt="goat with a funny tilted look straight at the camera"/>
+                    <div class="sub-text">What is this fascinating rock that seems to be looking directly at me?</div>
+                </div>
+                <div class="image">
+                    <img src="./images/twin-goats.jpg" alt="cute little twin goats"/>
+                    <div class="sub-text">TWINS!!!</div>
+                </div>
+                <div class="image">
+                    <img src="./images/inappropriate-goats.jpg" alt="baby goat getting fed by his momma, but it looks kinda inappropriate"/>
+                    <div class="sub-text">🫢</div>
+                </div>
+                <div class="image">
+                    <img src="./images/devil-goat.jpg" alt="goat with long horns that looks evil"/>
+                    <div class="sub-text">Yeah... I wouldn't wanna mess with that one either.</div>
+                </div>
+
+            </div>
+
+            <h2 class="title2 subtitle2">Popular GOATs</h2>
+            <div class="goats-container">
+                <div class="sport-image">
+                    <img src="./images/goat-look.jpg" alt="goat with a funny tilted look straight at the camera"/>
+                    <div class="sub-text">What is this fascinating rock that seems to be looking directly at me?</div>
+                </div>
+                <div class="sport-image" id="messi">
+                    <img src="./images/messi.jpeg" alt="picture of messi in argentina jersey celebrating a goal"/>
+                    <div class="sub-text">TWINS!!!</div>
+                </div>
+                <div class="sport-image">
+                    <img src="./images/muhammad-ali.jpeg" alt="baby goat getting fed by his momma, but it looks kinda inappropriate"/>
+                    <div class="sub-text">🫢</div>
+                </div>
+
+            </div>
         </div>
 
     </div>
-
-
 </body>
 
 </html>
