--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>&#128016;</text></svg>">
     <title>GOATs</title>
 </head>
 
@@ -15,7 +16,7 @@
             <ul id="navigation-bar">
                 <li class="right-align"><a class="nav-item" href="#about">About</a></li>
                 <li class="right-align"><a class="nav-item" href="#photos">Photos</a></li>
-                <li class="right-align"><a class="nav-item" href="#">Sign Up</a></li>
+                <li class="right-align"><a class="nav-item" href="#signup">Sign Up</a></li>
             </ul>
         </div>
 
@@ -58,21 +59,40 @@
             </div>
 
             <h2 class="title2 subtitle2">Popular GOATs</h2>
-            <div class="goats-container">
+            <div class="goats-container sport-goats">
                 <div class="sport-image">
-                    <img src="./images/goat-look.jpg" alt="goat with a funny tilted look straight at the camera"/>
-                    <div class="sub-text">What is this fascinating rock that seems to be looking directly at me?</div>
+                    <img src="./images/messi.jpeg" alt="goat with a funny tilted look straight at the camera"/>
+                    <div class="sub-text">Lionel Messi, the undisputed GOAT of Football.</div>
                 </div>
                 <div class="sport-image" id="messi">
-                    <img src="./images/messi.jpeg" alt="picture of messi in argentina jersey celebrating a goal"/>
-                    <div class="sub-text">TWINS!!!</div>
+                    <img src="./images/michael-jordan.jpg" alt="picture of messi in argentina jersey celebrating a goal"/>
+                    <div class="sub-text">Michael Jordan, the unrivaled GOAT of basketball.</div>
                 </div>
                 <div class="sport-image">
                     <img src="./images/muhammad-ali.jpeg" alt="baby goat getting fed by his momma, but it looks kinda inappropriate"/>
-                    <div class="sub-text">🫢</div>
+                    <div class="sub-text">Muhammad Ali, the legendary GOAT of boxing.</div>
                 </div>
-
             </div>
+        </div>
+
+        <div class="quote">
+            <em class="quote-text">Being a GOAT is a piece of cake... or should I say, a bale of hay? Just leap over hurdles, outshine the competition, and keep your cool like a cucumber-eating GOAT. Remember, greatness is not for the faint of bleat, but with enough attitude and some stylish horns, you'll be goat-tastic in no time!</em>
+            <div class="author">- Chat GPT, the GOAT of A.I.</div>
+        </div>
+
+        <div class="signup" id="signup">
+            <div class="signup-box">
+                <div class="messages">
+                    <div class="message-text">Join our Goated Newsletter Now!</div>
+                    <div class="sub-message">Sign up for our weekly newsletter to receive GOAT related things!</div>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div>© 2023 The Odin Project</div>
+            <div>GitHub: <a id="github" href="https://www.github.com/JadBizri" target="_blank">@JadBizri</a></div>
         </div>
 
     </div>
