--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="footer">
             <div>© 2023 The Odin Project</div>
-            <div>GitHub: <a id="github" href="https://www.github.com/JadBizri" target="_blank">@JadBizri</a></div>
+            <div>GitHub: <a id="github" href="https://github.com/JadBizri/Landing-Page" target="_blank">@JadBizri</a></div>
         </div>
 
     </div>
